feat: add delete product to swagger
